Finished implementing the front for the payment app need to add toasters for messeging

--- a/DotNet.Payment.9.0/DotNet.Payment.9.0/appsettings.json
+++ b/DotNet.Payment.9.0/DotNet.Payment.9.0/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ASUS\\SQLEXPRESS;Database=PaymentDetailDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=HAX;Database=PaymentDetailDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   }
 }
